--- a/src/App.css
+++ b/src/App.css
@@ -77,8 +77,8 @@ img {
 
 /* Estilos para el carrusel y su contenedor */
 .gallery-container {
-    margin: 0;
     display: flex;
+    flex-direction: column; /* Cambiar la dirección del flex container a columna */
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -134,6 +134,16 @@ img {
 #nextButton {
     right: 0;
     max-width: 50%;
+}
+
+.return-button {
+    padding: 40px 20px;
+    background-color: #ff0000;
+    border-radius: 10px;
+    margin: 20px;
+    border: none;
+    cursor: pointer;
+    text-align: center;
 }
 
 /* Estilos para los botones generales */
